# claude-context-bar

./: .gitignore  CHANGELOG.md  README.md  contextbar.py  pyproject.toml
.github/workflows/: publish.yml
