[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-context-bar"
version = "0.1.1"
description = "Live multi-session context-window meter for Claude Code."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Ethan" }]
keywords = ["claude", "claude-code", "tui", "context-window", "devtools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
windows = ["windows-curses; sys_platform == 'win32'"]

[project.urls]
Homepage = "https://github.com/ethanarnold/claude-context-bar"
Issues = "https://github.com/ethanarnold/claude-context-bar/issues"
Source = "https://github.com/ethanarnold/claude-context-bar"

[project.scripts]
contextbar = "contextbar:main"

[tool.setuptools]
py-modules = ["contextbar"]
